fix z-index of modal menu

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,11 @@
-#portal-root{
-    z-index: 9998;
+body{
+    #root{
+        position: relative;
+        z-index: 1;
+    }
+    #portal-root{
+        z-index: 2000;
+    }
 }
 
 /* tooltip */
